@@ -17,7 +17,6 @@
 package org.apache.sis.filter;
 
 import java.util.List;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.regex.Pattern;
 import org.apache.sis.util.ArgumentChecks;
@@ -169,8 +168,7 @@ final class LikeFilter<R> extends FilterNode<R> implements LikeOperator<R>, Opti
      */
     @Override
     protected Collection<?> getChildren() {
-        // TODO: use List.of(…) in JDK9.
-        return Arrays.asList(expression, pattern);
+        return List.of(expression, pattern);
     }
 
     /**
@@ -178,8 +176,7 @@ final class LikeFilter<R> extends FilterNode<R> implements LikeOperator<R>, Opti
      */
     @Override
     public List<Expression<? super R, ?>> getExpressions() {
-        // TODO: use List.of(…) in JDK9.
-        return Arrays.asList(expression, new LeafExpression.Literal<>(pattern));
+        return List.of(expression, new LeafExpression.Literal<>(pattern));
     }
 
     /**
