@@ -16,9 +16,7 @@
  */
 package org.apache.sis.metadata.sql;
 
-import java.util.Arrays;
 import java.util.Set;
-import java.util.HashSet;
 import org.opengis.util.InternationalString;
 import org.opengis.metadata.Identifier;
 import org.opengis.metadata.citation.Party;
@@ -48,7 +46,7 @@ public final strictfp class MetadataFallbackVerifier {
     /**
      * Identifier for which {@link MetadataFallback} does not provide hard-coded values.
      */
-    private static final Set<String> EXCLUDES = new HashSet<>(Arrays.asList("NetCDF", "GeoTIFF", "ArcGIS", "MapInfo"));
+    private static final Set<String> EXCLUDES = Set.of("NetCDF", "GeoTIFF", "ArcGIS", "MapInfo");
 
     /**
      * Creates a temporary database for comparing {@link MetadataFallback} content with database content.
