@@ -19,7 +19,6 @@ package org.apache.sis.internal.jaxb.referencing;
 import java.util.List;
 import java.util.Map;
 import java.util.IdentityHashMap;
-import java.util.Collections;
 import javax.xml.bind.JAXBException;
 import org.opengis.metadata.Identifier;
 import org.opengis.parameter.ParameterDescriptor;
@@ -116,8 +115,8 @@ public final strictfp class CC_OperationParameterGroupTest extends TestCase {
         final List<GeneralParameterDescriptor> fromXML    = unmarshal().descriptors();
         final List<GeneralParameterDescriptor> fromValues = UnmodifiableArrayList.wrap(expected);
         final Map<GeneralParameterDescriptor,GeneralParameterDescriptor> replacements = new IdentityHashMap<>(4);
-        final GeneralParameterDescriptor[] merged = CC_OperationParameterGroup.merge(fromXML,
-                fromValues.toArray(new GeneralParameterDescriptor[fromValues.size()]), replacements);
+        final var merged = CC_OperationParameterGroup.merge(fromXML,
+                fromValues.toArray(GeneralParameterDescriptor[]::new), replacements);
 
         assertTrue("Expected no replacement.", replacements.isEmpty());
         assertEquals("Number of parameters", 2, merged.length);
@@ -163,7 +162,7 @@ public final strictfp class CC_OperationParameterGroupTest extends TestCase {
         /*
          * All references to 'fromValue' will need to be replaced by references to 'complete'.
          */
-        assertEquals("replacements", Collections.singletonMap(fromValue, complete), replacements);
+        assertEquals("replacements", Map.of(fromValue, complete), replacements);
     }
 
     /**
@@ -179,7 +178,7 @@ public final strictfp class CC_OperationParameterGroupTest extends TestCase {
         List<GeneralParameterDescriptor> descriptors = group.descriptors();
 
         // Merge with the parameters defined in Mercator1SP class
-        group = CC_OperationMethod.group(group.getName(), descriptors.toArray(new GeneralParameterDescriptor[descriptors.size()]));
+        group = CC_OperationMethod.group(group.getName(), descriptors.toArray(GeneralParameterDescriptor[]::new));
         descriptors = group.descriptors();
 
         assertSame("name", group.getName(), group.getName());
